Fix weird spacing and list rendering

--- a/frontend/src/styles/theme.css
+++ b/frontend/src/styles/theme.css
@@ -13,5 +13,5 @@
 }
 
 body {
-	background: var(--sl-color-neutral-200);
+	background: #fff;
 }
